[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/frikativ_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UserInterface/Buttons/GameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/SHPinsher_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/SHPinsher_24.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/UserInterface/AnimatedCheckButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/WorldBackground.tscn" type="PackedScene" id=7]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Canvas" type="CanvasLayer" parent="."]
layer = 18

[node name="Home" type="Control" parent="Canvas"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Canvas/Home"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/Home/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 550.0
margin_bottom = 305.0

[node name="GameTitle" type="Label" parent="Canvas/Home/MarginContainer/VBoxContainer"]
margin_right = 540.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "Asterielle Slayer of Dwarves "
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Canvas/Home/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 540.0
margin_bottom = 261.0
size_flags_vertical = 3

[node name="Menu" type="VBoxContainer" parent="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 214.0
margin_top = 34.0
margin_right = 326.0
margin_bottom = 190.0

[node name="NewGameBtn" parent="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer/Menu" instance=ExtResource( 3 )]
button_label = "New Game"

[node name="ContinueBtn" parent="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer/Menu" instance=ExtResource( 3 )]
margin_top = 32.0
margin_bottom = 60.0
button_label = "Continue"

[node name="OptionsBtn" parent="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer/Menu" instance=ExtResource( 3 )]
margin_top = 64.0
margin_bottom = 92.0
button_label = "Options"

[node name="AboutBtn" parent="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer/Menu" instance=ExtResource( 3 )]
margin_top = 96.0
margin_bottom = 124.0
button_label = "About"

[node name="ExitBtn" parent="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer/Menu" instance=ExtResource( 3 )]
margin_top = 128.0
margin_bottom = 156.0
button_label = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="Canvas/Home/MarginContainer/VBoxContainer"]
margin_top = 265.0
margin_right = 540.0
margin_bottom = 295.0

[node name="VersionLabel" type="Label" parent="Canvas/Home/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 78.0
margin_bottom = 30.0
size_flags_vertical = 8
custom_fonts/font = ExtResource( 4 )
text = "Version 0.14.5"
valign = 1

[node name="FlyingOctopusLabel" type="Label" parent="Canvas/Home/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 540.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Flying Octopus"
align = 2
valign = 1

[node name="Options" type="Control" parent="Canvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Canvas/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/Options/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 550.0
margin_bottom = 305.0
custom_constants/separation = 20

[node name="BackBtn" parent="Canvas/Options/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
size_flags_horizontal = 0
button_label = "Back"

[node name="Label" type="Label" parent="Canvas/Options/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 540.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Canvas/Options/MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 540.0
margin_bottom = 164.0

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/Options/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 209.0
margin_right = 330.0
margin_bottom = 64.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Canvas/Options/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 121.0
margin_bottom = 27.0
alignment = 2

[node name="Label" type="Label" parent="Canvas/Options/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 6.0
margin_top = 3.0
margin_right = 36.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Music"
valign = 1

[node name="AnimatedCheckButton" parent="Canvas/Options/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 40.0
margin_right = 121.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Canvas/Options/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 121.0
margin_bottom = 64.0
alignment = 2

[node name="Label2" type="Label" parent="Canvas/Options/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 36.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Sounds"
valign = 1

[node name="AnimatedCheckButton2" parent="Canvas/Options/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 6 )]
margin_left = 40.0
margin_right = 121.0

[node name="About" type="Control" parent="Canvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer2" type="MarginContainer" parent="Canvas/About"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/About/MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 550.0
margin_bottom = 305.0
custom_constants/separation = 20

[node name="BackBtn" parent="Canvas/About/MarginContainer2/VBoxContainer" instance=ExtResource( 3 )]
size_flags_horizontal = 0
button_label = "Back"

[node name="Label" type="Label" parent="Canvas/About/MarginContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 540.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
text = "About"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Canvas/About/MarginContainer2/VBoxContainer"]
margin_top = 100.0
margin_right = 540.0
margin_bottom = 295.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/About/MarginContainer2/VBoxContainer/ScrollContainer"]
margin_right = 540.0
margin_bottom = 546.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="Canvas/About/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 528.0
margin_bottom = 144.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Canvas/About/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer2"]
margin_right = 528.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 5 )
text = "Kim jestesmy ?"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Canvas/About/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer2"]
margin_top = 40.0
margin_right = 528.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 4 )
text = "Jestesmy malym i ciagle rozwijajacym sie zespolem, który wspolnie probuje stworzyc
cos fajnego. A czym to cos jest, hmmm jakby na to nie patrzec gra. 
Wiekszosc informacji o nas znajdziesz na naszej stronie internetowej:"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Canvas/About/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer2"]
margin_top = 116.0
margin_right = 528.0
margin_bottom = 144.0

[node name="LinkBtn" parent="Canvas/About/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer2/CenterContainer" instance=ExtResource( 3 )]
margin_left = 208.0
margin_right = 320.0
button_label = "elf-vs-dwarves.pl"

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas/About/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 528.0
margin_bottom = 546.0
custom_constants/separation = 10

[node name="Label4" type="Label" parent="Canvas/About/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_right = 528.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 5 )
text = "Dlaczego stworzylismy zespol ?"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Canvas/About/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 528.0
margin_bottom = 382.0
custom_fonts/font = ExtResource( 4 )
text = "Oczywiście każdy z nas, ma swoje powody, które skłoniły go do dołączenia, 
jednak jest również kilka wspólnych o których tutaj napiszę, a mianowicie:
realizujemy swoje marzenia - tak, każdy z nas chciał kiedyś stworzyć własną grę, 
z mniejszymi bądź większymi sukcesami brnęliśmy do przodu,
los jednak chciał, że jako mniej doświadczone osoby zaczęliśmy 
szukać pomocy u innych i tak oto wszyscy trafiliśmy tutaj
motywacja - nie ma co ukrywać, dużo lepiej pracuje się nad czymkolwiek jak ma się kogoś 
z kim na ten temat można porozmawiać. 
Krótko mówiąc, jeśli samomotywacja nie wystarcza, 
zawsze znajdzie się tutaj ktoś kto pchnie Cię do dalszego działania.
całe życie się uczymy - chęć rozwoju i zdobycia wiedzy jest bardzo przydatna, 
a człowiek najlepiej się uczy od innych, to też wspólnie praktykujemy.
budujemy własne portfolio - nie czarujmy się, 
każdy z nas chce coś osiągnąć w przyszłości, a kilka w pełni zrealizowanych projektów,
 którymi można się pochwalić na pewno to ułatwi"
align = 1
valign = 1

[node name="WorldBackground" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer/Menu/NewGameBtn" to="." method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer/Menu/ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer/Menu/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer/Menu/AboutBtn" to="." method="_on_AboutBtn_pressed"]
[connection signal="pressed" from="Canvas/Home/MarginContainer/VBoxContainer/CenterContainer/Menu/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="Canvas/Options/MarginContainer/VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="Canvas/About/MarginContainer2/VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="Canvas/About/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/VBoxContainer2/CenterContainer/LinkBtn" to="." method="_on_LinkBtn_pressed"]
